--- a/pages/signup.css
+++ b/pages/signup.css
@@ -8,6 +8,7 @@
 
         .form__input-container {
             display: flex;
+            flex-direction: column;
             position: relative;
             width: 100%;
         }
@@ -48,6 +49,20 @@
 
             &:active {
                 background-color: var(--primary-darkest);
+            }
+        }
+
+        .form__warning-msg {
+            font-size: .9rem;
+            display: flex;
+            align-items: center;
+            gap: .2em;
+            color: red;
+            margin: 0;
+            padding: .1em 0 0 0;
+
+            i {
+                padding-top: .05em;
             }
         }
 
